<?xml version="1.0" encoding="utf-8"?>
<!-- - SysInfo Widget(s) - - Copyright (C) 2010 userdelroot r00t316@gmail.com 
	- - This program is free software: you can redistribute it and/or modify 
	- it under the terms of the GNU General Public License as published by - 
	the Free Software Foundation, either version 3 of the License, or any later 
	version. - - This program is distributed in the hope that it will be useful, 
	- but WITHOUT ANY WARRANTY; without even the implied warranty of - MERCHANTABILITY 
	or FITNESS FOR A PARTICULAR PURPOSE. See the - GNU General Public License 
	for more details. - - You should have received a copy of the GNU General 
	Public License - along with this program. If not, see <http://www.gnu.org/licenses/>. -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name">SysInfo</string>
	<string name="cpu_header">Cpu Usage</string>
	<string name="memory_header">Mem Usage</string>
	<string name="swap_header">Swap Usage</string>
	<string name="process_header">Processes</string>
	<string name="button_desc">Apply</string>
	<string name="create_widget_err">Error creating widget. Aborting..</string>
	<string name="format_string">
		<xliff:g id="value">%s</xliff:g>
	</string>
    <string name="widget_name">System Info</string>
    <string name="default_num_val">0</string>
</resources>
